--- a/Galactic Guidebook/DetailViewController.storyboard
+++ b/Galactic Guidebook/DetailViewController.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Detail View Controller-->
+        <!--Planet Details-->
         <scene sceneID="inc-b4-JgL">
             <objects>
                 <viewController id="CVq-OE-4RA" customClass="DetailViewController" customModule="Galactic_Guidebook" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,25 +19,25 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ISm-EY-h7Z">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="903"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="954"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pluto" translatesAutoresizingMaskIntoConstraints="NO" id="WkO-Xo-29X">
-                                                <rect key="frame" x="20" y="20" width="374" height="300"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space" translatesAutoresizingMaskIntoConstraints="NO" id="WkO-Xo-29X">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="282"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="300" id="4PT-t4-81g"/>
+                                                    <constraint firstAttribute="height" constant="282" id="4PT-t4-81g"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="planet name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQp-Sv-nFX">
-                                                <rect key="frame" x="20" y="340" width="374" height="49"/>
+                                                <rect key="frame" x="20" y="380" width="374" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="azl-1J-xTF"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="41"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNy-wr-eir">
-                                                <rect key="frame" x="20" y="409" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="460" width="374" height="60"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-telescope-50-2" translatesAutoresizingMaskIntoConstraints="NO" id="d89-Kz-bIw">
                                                         <rect key="frame" x="8" y="5" width="64" height="50"/>
@@ -69,7 +69,7 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Long Descriptioon" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LFC-Yj-s6E">
-                                                <rect key="frame" x="20" y="693" width="374" height="125"/>
+                                                <rect key="frame" x="20" y="744" width="374" height="125"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="125" id="Jjh-p6-PJs"/>
                                                 </constraints>
@@ -78,7 +78,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cqg-V8-ZgK">
-                                                <rect key="frame" x="20" y="477" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="528" width="374" height="60"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-planet-50-2" translatesAutoresizingMaskIntoConstraints="NO" id="XZ4-j5-fRc">
                                                         <rect key="frame" x="8" y="5" width="64" height="50"/>
@@ -110,7 +110,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ou-ad-tP7">
-                                                <rect key="frame" x="20" y="545" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="596" width="374" height="60"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-space-shuttle-50-2" translatesAutoresizingMaskIntoConstraints="NO" id="HiX-TY-VDZ">
                                                         <rect key="frame" x="8" y="5" width="64" height="50"/>
@@ -142,7 +142,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AXO-JU-ukL">
-                                                <rect key="frame" x="20" y="613" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="664" width="374" height="60"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-comet-50-2" translatesAutoresizingMaskIntoConstraints="NO" id="cPj-Gh-90J">
                                                         <rect key="frame" x="8" y="5" width="64" height="50"/>
@@ -174,12 +174,18 @@
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SUA-ao-0Mw">
-                                                <rect key="frame" x="20" y="853" width="374" height="30"/>
+                                                <rect key="frame" x="20" y="904" width="374" height="30"/>
                                                 <state key="normal" title="Link"/>
                                                 <connections>
                                                     <action selector="onLinkPressed:" destination="CVq-OE-4RA" eventType="touchUpInside" id="coG-zT-uwB"/>
                                                 </connections>
                                             </button>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mars2" translatesAutoresizingMaskIntoConstraints="NO" id="Cca-qO-KDX">
+                                                <rect key="frame" x="50" y="60" width="315" height="312"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="312" id="YpZ-Cb-FjK"/>
+                                                </constraints>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
@@ -188,21 +194,25 @@
                                             <constraint firstAttribute="bottom" secondItem="SUA-ao-0Mw" secondAttribute="bottom" constant="20" id="6CE-NW-Nd8"/>
                                             <constraint firstItem="3Ou-ad-tP7" firstAttribute="top" secondItem="cqg-V8-ZgK" secondAttribute="bottom" constant="8" id="7FY-qj-lIu"/>
                                             <constraint firstItem="LFC-Yj-s6E" firstAttribute="top" secondItem="AXO-JU-ukL" secondAttribute="bottom" constant="20" id="82A-Q0-zpu"/>
+                                            <constraint firstItem="Cca-qO-KDX" firstAttribute="top" secondItem="ISm-EY-h7Z" secondAttribute="top" constant="60" id="9f9-bD-CFH"/>
                                             <constraint firstItem="SUA-ao-0Mw" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="AsA-N4-lhZ"/>
-                                            <constraint firstAttribute="trailing" secondItem="WkO-Xo-29X" secondAttribute="trailing" constant="20" id="EOh-bt-3DG"/>
+                                            <constraint firstAttribute="trailing" secondItem="WkO-Xo-29X" secondAttribute="trailing" id="EOh-bt-3DG"/>
                                             <constraint firstItem="3Ou-ad-tP7" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="FcN-Hd-RwT"/>
+                                            <constraint firstItem="iQp-Sv-nFX" firstAttribute="top" secondItem="Cca-qO-KDX" secondAttribute="bottom" constant="8" id="Gcl-zx-ckm"/>
                                             <constraint firstItem="cqg-V8-ZgK" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="Jxi-DY-Lna"/>
-                                            <constraint firstItem="iQp-Sv-nFX" firstAttribute="top" secondItem="WkO-Xo-29X" secondAttribute="bottom" constant="20" id="Kvq-S6-sYp"/>
+                                            <constraint firstItem="iQp-Sv-nFX" firstAttribute="top" secondItem="WkO-Xo-29X" secondAttribute="bottom" constant="98" id="Kvq-S6-sYp"/>
                                             <constraint firstItem="LFC-Yj-s6E" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="KyT-MA-gbA"/>
-                                            <constraint firstItem="WkO-Xo-29X" firstAttribute="top" secondItem="ISm-EY-h7Z" secondAttribute="top" constant="20" id="NWY-NV-dd4"/>
+                                            <constraint firstItem="WkO-Xo-29X" firstAttribute="top" secondItem="ISm-EY-h7Z" secondAttribute="top" id="NWY-NV-dd4"/>
                                             <constraint firstAttribute="trailing" secondItem="HNy-wr-eir" secondAttribute="trailing" constant="20" id="V8Z-N9-ace"/>
                                             <constraint firstAttribute="trailing" secondItem="iQp-Sv-nFX" secondAttribute="trailing" constant="20" id="VKg-85-gU1"/>
                                             <constraint firstAttribute="trailing" secondItem="AXO-JU-ukL" secondAttribute="trailing" constant="20" id="Yvm-9O-hQI"/>
+                                            <constraint firstAttribute="trailing" secondItem="Cca-qO-KDX" secondAttribute="trailing" constant="49" id="aNe-DD-DIp"/>
+                                            <constraint firstItem="Cca-qO-KDX" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="50" id="aQt-Mh-xea"/>
                                             <constraint firstItem="AXO-JU-ukL" firstAttribute="top" secondItem="3Ou-ad-tP7" secondAttribute="bottom" constant="8" id="gQ8-d4-dqQ"/>
                                             <constraint firstItem="AXO-JU-ukL" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="jBX-9X-F3V"/>
                                             <constraint firstItem="HNy-wr-eir" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="nZI-hV-jqd"/>
                                             <constraint firstAttribute="trailing" secondItem="3Ou-ad-tP7" secondAttribute="trailing" constant="20" id="ntN-YA-aIq"/>
-                                            <constraint firstItem="WkO-Xo-29X" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="pIt-b0-8tZ"/>
+                                            <constraint firstItem="WkO-Xo-29X" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" id="pIt-b0-8tZ"/>
                                             <constraint firstItem="iQp-Sv-nFX" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="rPc-Kb-oKa"/>
                                             <constraint firstAttribute="trailing" secondItem="cqg-V8-ZgK" secondAttribute="trailing" constant="20" id="s5f-u3-Nnd"/>
                                             <constraint firstAttribute="trailing" secondItem="SUA-ao-0Mw" secondAttribute="trailing" constant="20" id="u2o-nX-eaR"/>
@@ -230,8 +240,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Sdm-N7-Tvl"/>
                     </view>
-                    <navigationItem key="navigationItem" id="yNe-Dy-2gh"/>
+                    <navigationItem key="navigationItem" title="Planet Details" largeTitleDisplayMode="always" id="yNe-Dy-2gh">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="z3S-4a-XDY"/>
+                    </navigationItem>
                     <connections>
+                        <outlet property="circlePlanetImage" destination="Cca-qO-KDX" id="M0i-Ir-o3r"/>
                         <outlet property="diameterLabel" destination="ykI-3e-Agh" id="Rf4-al-WkF"/>
                         <outlet property="distanceLabel" destination="fv7-aa-NUf" id="gmo-2l-inm"/>
                         <outlet property="funFactLabel" destination="lWG-g1-5eJ" id="1cA-fO-NI0"/>
@@ -269,6 +282,7 @@
         <image name="icons8-planet-50-2" width="50" height="50"/>
         <image name="icons8-space-shuttle-50-2" width="50" height="50"/>
         <image name="icons8-telescope-50-2" width="50" height="50"/>
-        <image name="pluto" width="320" height="320"/>
+        <image name="mars2" width="600" height="600"/>
+        <image name="space" width="960" height="640"/>
     </resources>
 </document>
