--- a/Galactic Guidebook/DetailViewController.storyboard
+++ b/Galactic Guidebook/DetailViewController.storyboard
@@ -19,7 +19,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ISm-EY-h7Z">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="978"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="968"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space" translatesAutoresizingMaskIntoConstraints="NO" id="WkO-Xo-29X">
                                                 <rect key="frame" x="-20" y="-29" width="454" height="335"/>
@@ -27,17 +27,17 @@
                                                     <constraint firstAttribute="height" constant="335" id="4PT-t4-81g"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="planet name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQp-Sv-nFX">
-                                                <rect key="frame" x="20" y="380" width="374" height="60"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="planet name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQp-Sv-nFX">
+                                                <rect key="frame" x="20" y="380" width="374" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="azl-1J-xTF"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
+                                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="50"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNy-wr-eir">
-                                                <rect key="frame" x="20" y="460" width="374" height="66"/>
+                                                <rect key="frame" x="20" y="450" width="374" height="66"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-telescope-50-2" translatesAutoresizingMaskIntoConstraints="NO" id="d89-Kz-bIw">
                                                         <rect key="frame" x="8" y="8" width="64" height="50"/>
@@ -69,7 +69,7 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Long Descriptioon" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LFC-Yj-s6E">
-                                                <rect key="frame" x="20" y="768" width="374" height="125"/>
+                                                <rect key="frame" x="20" y="758" width="374" height="125"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="125" id="Jjh-p6-PJs"/>
                                                 </constraints>
@@ -78,7 +78,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cqg-V8-ZgK">
-                                                <rect key="frame" x="20" y="534" width="374" height="66"/>
+                                                <rect key="frame" x="20" y="524" width="374" height="66"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-planet-50-2" translatesAutoresizingMaskIntoConstraints="NO" id="XZ4-j5-fRc">
                                                         <rect key="frame" x="8" y="8" width="64" height="50"/>
@@ -110,7 +110,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ou-ad-tP7">
-                                                <rect key="frame" x="20" y="608" width="374" height="66"/>
+                                                <rect key="frame" x="20" y="598" width="374" height="66"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-space-shuttle-50-2" translatesAutoresizingMaskIntoConstraints="NO" id="HiX-TY-VDZ">
                                                         <rect key="frame" x="8" y="8" width="64" height="50"/>
@@ -142,7 +142,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AXO-JU-ukL">
-                                                <rect key="frame" x="20" y="682" width="374" height="66"/>
+                                                <rect key="frame" x="20" y="672" width="374" height="66"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-comet-50-2" translatesAutoresizingMaskIntoConstraints="NO" id="cPj-Gh-90J">
                                                         <rect key="frame" x="8" y="8" width="64" height="50"/>
@@ -174,13 +174,13 @@
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SUA-ao-0Mw">
-                                                <rect key="frame" x="20" y="928" width="374" height="30"/>
+                                                <rect key="frame" x="20" y="918" width="374" height="30"/>
                                                 <state key="normal" title="Link"/>
                                                 <connections>
                                                     <action selector="onLinkPressed:" destination="CVq-OE-4RA" eventType="touchUpInside" id="coG-zT-uwB"/>
                                                 </connections>
                                             </button>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mars2" translatesAutoresizingMaskIntoConstraints="NO" id="Cca-qO-KDX">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pngguru.com-4" translatesAutoresizingMaskIntoConstraints="NO" id="Cca-qO-KDX">
                                                 <rect key="frame" x="49" y="57" width="317" height="315"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="315" id="YpZ-Cb-FjK"/>
@@ -282,7 +282,7 @@
         <image name="icons8-planet-50-2" width="50" height="50"/>
         <image name="icons8-space-shuttle-50-2" width="50" height="50"/>
         <image name="icons8-telescope-50-2" width="50" height="50"/>
-        <image name="mars2" width="600" height="600"/>
+        <image name="pngguru.com-4" width="1107" height="1107"/>
         <image name="space" width="960" height="640"/>
     </resources>
 </document>
